setup/core/docs/aws/resources/grafana-ingress.yaml
apiVersion: extensions/v1beta1 
kind: Ingress 
metadata: 
  annotations: 
    cert-manager.io/cluster-issuer: letsencrypt-staging 
    kubernetes.io/tls-acme: "true" 
    nginx.ingress.kubernetes.io/proxy-body-size: "0" 
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600" 
  name: codedx-app-grafana 
  namespace: cdx-app 
spec: 
  rules: 
  - host: CODEDXHOSTNAME
    http: 
      paths: 
      - backend: 
          serviceName: grafana 
          servicePort: 80 
        path: / 
  tls: 
  - hosts: 
    - CODEDXHOSTNAME
    secretName: ingress-tls-secret
